Javadoc 설정 변경, Base64 Encoder/Decoder Library 변경